--- a/src/pages/detailsVacancies.html
+++ b/src/pages/detailsVacancies.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>NISRA Details</title>
+    <link rel="stylesheet" href="../../style.css">
     <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="shortcut icon" href="../assets/media/istockphoto-858209386-612x612.jpg" type="image/x-icon">
@@ -20,7 +21,7 @@
         <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="/index.html" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900 logo-n">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
