--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -17,7 +17,7 @@
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600 max-w">
                 Or
-                <a href="register.html" class="font-medium text-blue-600 hover:text-blue-500">
+                <a href="../../index.html" class="font-medium text-blue-600 hover:text-blue-500">
                     create an account
                 </a>
             </p>
@@ -31,7 +31,7 @@
                             Users Email or Company Username
                         </label>
                         <div class="mt-1">
-                            <input id="login-email" name="email" type="email" autocomplete="email" 
+                            <input id="login-email" name="email" type="email" autocomplete="email"
                                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                                 placeholder="Enter your email address or Username">
                         </div>
@@ -43,7 +43,6 @@
                         </label>
                         <div class="mt-1">
                             <input id="login-password" name="password" type="password" autocomplete="current-password"
-                              
                                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                                 placeholder="Enter your password">
                         </div>
