--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cv</title>
+  <link rel="stylesheet" href="../../style.css">
   <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -17,7 +18,7 @@
         <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="/index.html" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900 logo-n">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
