--- a/src/pages/addJob.html
+++ b/src/pages/addJob.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Add Job</title>
+  <link rel="stylesheet" href="../../style.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
 
@@ -17,7 +18,7 @@
         <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="/index.html" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900 logo-n">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
@@ -82,46 +83,48 @@
       </section>
     </nav>
   </header>
-  <h2 class="text-2xl font-bold mb-4 mx-auto w-1/2">İş Müraciəti Formu</h2>
+  <main class="pt-48 pb-16">
 
-  <form id="jobForm" class="space-y-6 w-1/2 mx-auto">
-    <div>
-      <label for="title" class="block text-sm font-medium text-gray-700 mb-1">Başlıq:</label>
-      <input type="text" id="title" name="title" required
-        class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
-    </div>
+    <h2 class="text-2xl font-bold mb-4 mx-auto w-1/2">İş Müraciəti Formu</h2>
 
-    <div>
-      <label for="description" class="block text-sm font-medium text-gray-700 mb-1">Təsvir:</label>
-      <textarea id="description" name="description" required
-        class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
-    </div>
+    <form id="jobForm" class="space-y-6 w-1/2 mx-auto">
+      <div>
+        <label for="title" class="block text-sm font-medium text-gray-700 mb-1">Başlıq:</label>
+        <input type="text" id="title" name="title" required
+          class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
+      </div>
 
-    <div>
-      <label for="salary" class="block text-sm font-medium text-gray-700 mb-1">Maaş:</label>
-      <input type="number" id="salary" name="salary" required
-        class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
-    </div>
+      <div>
+        <label for="description" class="block text-sm font-medium text-gray-700 mb-1">Təsvir:</label>
+        <textarea id="description" name="description" required
+          class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+      </div>
 
-    <div>
-      <label for="employmentType" class="block text-sm font-medium text-gray-700 mb-1">İş Növü:</label>
-      <select id="employmentType" name="employmentType" required
-        class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
-        <option value="full-time">Full-time</option>
-        <option value="part-time">Part-time</option>
-        <option value="freelance">Freelance</option>
-      </select>
-    </div>
+      <div>
+        <label for="salary" class="block text-sm font-medium text-gray-700 mb-1">Maaş:</label>
+        <input type="number" id="salary" name="salary" required
+          class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
+      </div>
 
-    <div>
-      <button type="submit"
-        class="bg-indigo-600 text-white font-medium py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-        Göndər
-      </button>
-    </div>
-  </form>
+      <div>
+        <label for="employmentType" class="block text-sm font-medium text-gray-700 mb-1">İş Növü:</label>
+        <select id="employmentType" name="employmentType" required
+          class="block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500">
+          <option value="full-time">Full-time</option>
+          <option value="part-time">Part-time</option>
+          <option value="freelance">Freelance</option>
+        </select>
+      </div>
 
-  <p id="output" class="mt-4 text-sm text-gray-600"></p>
+      <div>
+        <button type="submit"
+          class="bg-indigo-600 text-white font-medium py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          Göndər
+        </button>
+      </div>
+    </form>
+
+    <p id="output" class="mt-4 text-sm text-gray-600"></p>
 
 
   </main>
