--- a/src/pages/companieDetails.html
+++ b/src/pages/companieDetails.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Company Details</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../../style.css">
   <script defer type="module" src="../services/companyDetails.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
@@ -21,7 +22,7 @@
         <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="/index.html" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900 logo-n">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
@@ -112,12 +113,10 @@
         </div>
       </div>
 
-      <button 
-      onclick="goBack()" 
-      class="mb-4 px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600" style="margin-top: 10px;"
-    >
-      Go Back
-    </button>
+      <button class="mb-4 px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
+        style="margin-top: 10px;">
+        Go Back
+      </button>
 
 
     </div>
